--- a/20-21-2/01. Gyak/index.html
+++ b/20-21-2/01. Gyak/index.html
@@ -9,5 +9,6 @@
 <body>
     
 </body>
-<script src="script.js"></script>
+<!--script src="script.js"></script-->
+<script src="feladatok.js"></script>
 </html>
